--- a/index.html
+++ b/index.html
@@ -1,43 +1,62 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="C:\layout-ficso\pasta-tabela\html\ESTILO.CSS">
-    <title>Document</title>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Document</title>
+   <link rel="stylesheet" href="C:\layout-ficso\pasta-tabela\html\estilo.css">
 </head>
-        <body>
-                <h2>estilizando tabela </h2>
-                <table>
-            <tr> 
-            <th>codigo</th>
-            <th>produto</th>
-            <th class="numeros">preco</th>
+<body>
+   <div class="principal">
+   <h2>estilizando formulario</h2>
+   <form >
+      <fieldset>
+         <legend> Detalhes de contato </legend>
 
-            <tr class="alternado"> 
-            <td>0001</td>
-            <td>notebook</td>
-            <td class="numeros">R$2500</td>
-            </tr>
+           <div>
+              <label for="nome"> nome</label>
+                 <input type="text" name="nome" id="nome">
+              </div>         
 
-            <tr> 
-            <td>0002</td>
-            <td>tablete</td>
-            <td class="numeros">R$250</td>
-            </tr>
+            <div>
+         <label for="email">email</label>
+    <input type="email" name="email" id="email">
+ </div>
+    <div>
+       <label for="senha">senha</label>
+          <input type="password" name="password" id="senha">
+      </div>
 
-            <tr class="alternado"> 
-            <td>0003</td>
-            <td>bike</td>
-            <td class="numeros">R$1800</td>
-            </tr>
+      </fieldset>
 
-        </tr>
+      <fieldset>
+          <legend> comentario</legend>
+            <div>
+               <label for="comentario">mensagem</label>
+                <textarea name="comentario "    id="comentario"> </textarea>
+                  </div>
+      </fieldset>
 
+      <fieldset>
+         <legend>lembre de mim </legend>
+            <div>
+               <label >
+                 <input class="radio" type="radio" name="lembre" id="sim">sim
+            </label>
+         </div>
 
+            <div>
+               <label >
+               <input class="radio" type="radio" name="lembre" id="nai">nao
+            </label>
+         </div>
 
-
-
-            </table>
+         <div class="center" >
+            <a href="proximo">proximo</a>
+            <div>
+         </div>
+      </fieldset>
+   </form>
+   </div>
 </body>
 </html>
